2007-08-15  Per Abrahamsen  <abraham@dina.kvl.dk>

	* cdaisy.C, cdaisy.h (daisy_column_location_size)
	(daisy_column_location_x, daisy_column_location_y): New functions.

2007-08-14  Per Abrahamsen  <abraham@dina.kvl.dk>

	* column.C, column.h (location): New parameter.

2007-07-27  Per Abrahamsen  <abraham@dina.kvl.dk>

	* depth.C (DepthExtern): New model.

2007-07-13  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.18 released.

2007-07-13  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Makefile: Upgraded to Qt 4.3.0.

2007-07-11  Per Abrahamsen  <abraham@dina.kvl.dk>

	* groundwater_extern.C (initial_table): New parameter.

2007-07-10  Per Abrahamsen  <abraham@dina.kvl.dk>

	* action_extern.C: New model.
	* Makefile (MODELS): Add it.

	* all: Made all actions and conditions take "Scope" argument.
	
2007-07-06  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.17 released.

2007-07-06  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Makefile (daisyw.exe): Link GUIOBJECTS directly.

2007-07-05  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.16 released.

	* cropNdist renamed to rubiscoNdist.
	
2007-07-03  Per Abrahamsen  <abraham@dina.kvl.dk>

	* fetch.C (width): Fixed problem with small negative numbers.

	* scope_exchange.h: New interface.

	* number_arit.C (NumberPLF): New model.

2007-05-10  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.15 released.

2007-05-10  Per Abrahamsen  <abraham@dina.kvl.dk>

	* root_system.C (MxNO3Up): Changed default value from 2.5e-8 to
	2.5e-7.

2007-05-10  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.14 released.

2007-05-10  Per Abrahamsen  <abraham@dina.kvl.dk>

	* txt/Makefile (tutorial.dvi, tutorial.pdf, exercises.pdf) 
	(exercises.dvi): Added dependencies on other documents.

	* toplevel.C, toplevel.h (parse_system_file): New member function.
	* toplevel.C (parse_file): Use it.
	* ui_Qt_run.C (attach): Ditto.

	* toplevel.C (get_daisy_home): New function.
	(initialize_once): Use it.