@@ -29,22 +29,19 @@ namespace Unit_test
             Assert.AreEqual(true, scope.Writeable());
             scope.SetNumber(name, 10.10);
             Assert.AreEqual(true, scope.HasNumber(name));
-            Assert.AreEqual(true, scope.HasNumber("x"));
         }
         [Test]
         public void NumberSize()
         {
             Scope scope = GetInitScope();
-            Assert.AreEqual(3, scope.NumberSize());
+            Assert.AreEqual(1, scope.NumberSize());
         }
         [Test]
         public void NumberName()
         {
             Scope scope = GetInitScope();
-            Assert.Greater(scope.NumberSize(), 2);
-            Assert.AreEqual("x", scope.NumberName(0));
-            Assert.AreEqual("y", scope.NumberName(1));
-            Assert.AreEqual("GroundWaterTable", scope.NumberName(2));
+            Assert.Greater(scope.NumberSize(), 0);
+            Assert.AreEqual("GroundWaterTable", scope.NumberName(0));
         }
         [Test]
         public void Number()
